0.9.5 - unreleased
* BREAKING CHANGE: you must require 'iconv' if you use the :encode_processor from now on (thbar)
* A non-zero exit code should be returned on fatal screen or exceeded error threshold (thbar)
* BREAKING CHANGE: the TruncateProcessor will now RESTART IDENTITY when using postgres - this behaviour can be changed by passing :options => 'CONTINUE IDENTITY' (thbar)
* New EnsureFieldsPresenceProcessor (thbar)
* New CsvDestination based on FasterCSV (lgustafson)
* Fix #41: Allow cache to be turned off on ForeignKeyLookupTransform
* Fix #36: etl --read-locally picks wrong last file (lgustafson)
* BREAKING CHANGE: DelimitedParser has been renamed to CsvParser, to emphasize the fact that this parser relies on FasterCSV under the hood (which means it will choke on faulty data).
* Fixes for Rails 3 (gkfabs)
* Fixes for Ruby 1.9.2 (jlecour, byrnejb, thbar)
* improvements on CalculationTransform (gkfabs)
* batch can have children (gkfabs)
* read all columns by default in CsvParser (smeyfroi)
* Turn db config into a HashWithIndifferentAccess (smeyfroi)
* DatabaseJoinProcessor (gkfabs)
* ImapattachmentDownloaderProcessor (gkfabs)
* Pop3attachementDownloaderProcessor (gkfabs)
* Enhancements and fixes on EscapeCSVProcessor (gkfabs)
* Bug correction on hash initialization DatabaseSource (gkfabs)
* FilterRowProcessor won't return nil (gkfabs)
* DatabaseSource fixes (gkfabs)
* New UpdateDatabaseDestination (gkfabs)
* New InsertUpdateDatabaseDestination (gkfabs)
* New Excel destination (gkfabs)
* New Excel parser (gkfabs)
* Add ability to use a query in DatabaseSource (gkfabs)
* Modified SQLResolver to allow for multiple key lookups on dimension
table (cdimartino)
* Add scd_required_fields which allow to avoid specifying the scd fields when specifying :unique in a destination (darrell)
* More SCD debug logging (darrell)
* Make database destination table quoting database agnostic (darrell)
* Allow absolute paths in file destinations and file bulk imports (darrell)